--- a/Index.html
+++ b/Index.html
@@ -32,23 +32,48 @@
 	</div>	
 
 	<div class="video">
-
-		<iframe width="750" height="400" src="https://www.youtube.com/embed/ZnuwB35GYMY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		<p> How To Embed A YouTube Video <br>999,999 Views </p>
+		<iframe width="750" height="420" src="https://www.youtube.com/embed/8um1r34wQkM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<p > Airbus Heritage - Concorde <span><br/>999,999 Views</span> </p>
 		
 	</div>
 
 	<div class="coment_box">
 
 		<div class="description">
-			
-						
+		<br>
+		<br>
+			<div class="gfd">
 
+				<img class="airbus" src="assets\images\airbus.png">
+		
+			</div>
+			
+			<div id=padd>
+
+				<p> <span id=user>Airbus</span> <span><br> published 2 march 2019</span> <a class="subscribe" href="#"> SUBSCRIBE 999 K </a>
+				<br> <span id=descp>On the occasion of the 50th anniversary of the maiden flight of Concorde (2, March 1969),
+				 take a look at some exclusive footage from our archives. More info on Concorde: https://www.airbus
+				.com/newsroom/stori...</span>
+				</p>
+				<br>
+				<span class="more"> SHOW MORE </span>
+	
+			</div>
+						
 		</div>
 
 	</div>
 
 	<div class="sidebar">
+		<p id=sidi> Next</p>
+		<img class="videos" src="assets\images\video1.png">
+		<img class="videos" src="assets\images\video2.png">
+		<img class="videos" src="assets\images\video3.png">
+		<img class="videos" src="assets\images\video4.png">
+		<img class="videos" src="assets\images\video5.png">
+		<img class="videos" src="assets\images\video6.png">
+		<img class="videos" src="assets\images\video7.png">
+		<img class="videos" src="assets\images\video8.png">
 
 	</div>
 
